--- a/notebooks/User_Rec_Pipeline_Exploration.ipynb
+++ b/notebooks/User_Rec_Pipeline_Exploration.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -101,19 +101,19 @@
       "2        6                     3  2009-07-12 04:51:15\n",
       "\n",
       "    user_id  engaged_with_user_id            timestamp\n",
-      "0  1492089               1187821  2019-06-27 00:00:04\n",
-      "1   274150                100060  2019-06-27 00:00:05\n",
-      "2  1934590               1201608  2019-06-27 00:00:05\n",
+      "0   434018                318908  2019-07-03 00:00:00\n",
+      "1  2010747               1148584  2019-07-03 00:00:01\n",
+      "2   970851               1474180  2019-07-03 00:00:01\n",
       "\n",
       "    user_id  engaged_with_user_id            timestamp\n",
-      "0  1492089               1192361  2019-06-27 00:00:04\n",
-      "1   274150                102367  2019-06-27 00:00:05\n",
-      "2  1587535               1411448  2019-06-27 00:00:10\n",
+      "0   970851                795541  2019-07-03 00:00:01\n",
+      "1  1131490               1875300  2019-07-03 00:00:05\n",
+      "2  1248076                115915  2019-07-03 00:00:09\n",
       "\n",
       "    user_id  engaged_with_user_id            timestamp\n",
-      "0   937255                277059  2019-06-27 00:00:00\n",
-      "1   553849               1358502  2019-06-27 00:00:00\n",
-      "2  1587535               1474142  2019-06-27 00:00:02\n",
+      "0  1119436               1616220  2019-07-03 00:00:00\n",
+      "1  1690933               2152331  2019-07-03 00:00:02\n",
+      "2  2141226               2118816  2019-07-03 00:00:03\n",
       "\n",
       "   user_id  suspended\n",
       "0       1          0\n",
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +175,7 @@
        " 'recommended': False}"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,8 +234,8 @@
     "    df = pd.DataFrame({'user':user, 'calendar_date':calendar_date,'body':body, 'link_desc':link_desc})\n",
     "\n",
     "    # Create weekly bins for aggregating messages\n",
-    "    df['daydiff'] = df['calendar_date'].apply(lambda x: (x- date(2018,9,9)).days)\n",
-    "    bins = range(0, 365, 7)\n",
+    "    df['daydiff'] = df['calendar_date'].apply(lambda x: (x- date(2015,12,8)).days)\n",
+    "    bins = range(0, 190, 7)\n",
     "    df['date_range'] = pd.cut(df['daydiff'], bins)\n",
     "        \n",
     "    return df\n",
@@ -277,55 +277,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user</th>\n",
+       "      <th>date_range</th>\n",
+       "      <th>clean_body</th>\n",
+       "      <th>clean_link_desc</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>39</td>\n",
+       "      <td>(0, 7]</td>\n",
+       "      <td>why do you have a picture of unabomber on your...</td>\n",
+       "      <td>why do you have a picture of the unabomber on ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>39</td>\n",
+       "      <td>(7, 14]</td>\n",
+       "      <td>clf approaching  low video http stock mkt anal...</td>\n",
+       "      <td>be on the lookout for a free webinar lessons ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>39</td>\n",
+       "      <td>(14, 21]</td>\n",
+       "      <td>very cool end of year video from  http video h...</td>\n",
+       "      <td>we look back at the major events of  that inve...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>39</td>\n",
+       "      <td>(21, 28]</td>\n",
+       "      <td>ytd vwaps   spx  spy   day moving average on ...</td>\n",
+       "      <td>safeguarding your email address and webinar ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>39</td>\n",
+       "      <td>(28, 35]</td>\n",
+       "      <td>no trust for spy action but it is interesting ...</td>\n",
+       "      <td>stock market analysis   education webinars  ...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   user date_range                                         clean_body  \\\n",
+       "0    39     (0, 7]  why do you have a picture of unabomber on your...   \n",
+       "1    39    (7, 14]  clf approaching  low video http stock mkt anal...   \n",
+       "2    39   (14, 21]  very cool end of year video from  http video h...   \n",
+       "3    39   (21, 28]   ytd vwaps   spx  spy   day moving average on ...   \n",
+       "4    39   (28, 35]  no trust for spy action but it is interesting ...   \n",
+       "\n",
+       "                                     clean_link_desc  \n",
+       "0  why do you have a picture of the unabomber on ...  \n",
+       "1   be on the lookout for a free webinar lessons ...  \n",
+       "2  we look back at the major events of  that inve...  \n",
+       "3    safeguarding your email address and webinar ...  \n",
+       "4    stock market analysis   education webinars  ...  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Score Prediction\n",
-    "from keras.models import model_from_json\n",
-    "\n",
-    "max_features = 18900\n",
-    "maxlen = 1500\n",
-    "\n",
-    "def pred_pct(x):\n",
-    "    return sum(x)/len(x)\n",
-    "\n",
-    "def pred_y(x, df, model):\n",
-    "    preds = model.predict([x], batch_size=1024, verbose=1)\n",
-    "\n",
-    "    y_pred = np.zeros(len(preds))\n",
-    "    for i in range(len(preds)):\n",
-    "        y_pred[i] = 1 if preds[i]>=.5 else 0\n",
-    "    \n",
-    "    pred_df = pd.concat([df, pd.DataFrame({'pred':y_pred})], axis=1)\n",
-    "    pred_grp= pred_df.groupby('user_id').agg({'pred':pred_pct}).reset_index() \n",
-    "    pred_grp.sort_values('user_id',inplace=True)\n",
-    "\n",
-    "    return pred_grp\n",
-    "\n",
-    "def model_predict(testing_weekly):       \n",
-    "    X_test = testing_weekly['clean_body'].values    \n",
-    "    tokenizer = text.Tokenizer(num_words=max_features)\n",
-    "    tokenizer.fit_on_texts(list(X_train))\n",
-    "    X_test = tokenizer.texts_to_sequences(X_test)\n",
-    "    x_test = sequence.pad_sequences(X_test, maxlen)\n",
-    "    \n",
-    "    # Load Trained Model\n",
-    "    json_file = open('cnn_model.json', 'r')\n",
-    "    loaded_model_json = json_file.read()\n",
-    "    json_file.close()\n",
-    "    loaded_model = model_from_json(loaded_model_json)\n",
-    "    loaded_model.load_weights(\"cnn_model.h5\")\n",
-    "    loaded_model.compile(loss='binary_crossentropy', optimizer='rmsprop', metrics=['accuracy'])    \n",
-    "\n",
-    "    return pred_y(x_test, testing_weekly, loaded_model)"
+    "msg_weekly.head()"
    ]
   },
   {
@@ -339,23 +383,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Data Model for find_closest_connectios - postgresql table\n",
     "# The closest_connections table has the top 50 users that a user most closely engaged with in the last three months.\n",
     "\n",
-    "\"\"\"\n",
-    "    CREATE TABLE graph_recs.closest_connections (\n",
-    "    user_id             INT    NOT NULL,\n",
-    "    closest_connection  INT    NOT NULL,\n",
-    "    weight              Decimal     NOT NULL,\n",
-    "    created_at          TIMESTAMPTZ NOT NULL,\n",
-    "    updated_at          TIMESTAMPTZ NOT NULL,    \n",
-    "    PRIMARY KEY         (user_id, closest_connection)\n",
-    "    );\n",
-    "\"\"\"  \n",
     "\n",
     "# Data Model for calc_reputation_score - csv file\n",
     "# The csv file has two columns: user_id and score for each user.\n",
@@ -364,27 +398,7 @@
     "# Data Model for find_user_rec - postgresql tables\n",
     "# 1. The recommnedations table contains the recommended users.\n",
     "# 2. For every recommedation, we also store why it is made by looking at each closest connection's contribution. \n",
-    "#    The rec_reasons table has that info.  \n",
-    "\n",
-    "\"\"\"\n",
-    "    CREATE TABLE graph_recs.recommendations (\n",
-    "    user_id             INT    NOT NULL,\n",
-    "    rec_id              INT    NOT NULL,\n",
-    "    created_at          TIMESTAMPTZ NOT NULL,\n",
-    "    updated_at          TIMESTAMPTZ NOT NULL,    \n",
-    "    PRIMARY KEY         (user_id, rec_id)\n",
-    "    );\n",
-    "    \n",
-    "    CREATE TABLE graph_recs.rec_reasons (\n",
-    "    user_id             INT    NOT NULL,\n",
-    "    rec_id              INT    NOT NULL,\n",
-    "    reason_id           INT    NOT NULL,\n",
-    "    weight              Decimal    NOT NULL,\n",
-    "    created_at          TIMESTAMPTZ NOT NULL,\n",
-    "    updated_at          TIMESTAMPTZ NOT NULL,    \n",
-    "    PRIMARY KEY         (user_id, rec_id, reason_id)\n",
-    "    );    \n",
-    "\"\"\"  \n"
+    "#    The rec_reasons table has that info.  "
    ]
   },
   {
@@ -420,7 +434,38 @@
    "outputs": [],
    "source": [
     "# Write code here\n",
-    "# Please refer to the repo for details"
+    "# Data Model for find_closest_connectios - postgresql table\n",
+    "\"\"\"\n",
+    "    CREATE TABLE graph_recs.closest_connections (\n",
+    "    user_id             INT    NOT NULL,\n",
+    "    closest_connection  INT    NOT NULL,\n",
+    "    weight              Decimal     NOT NULL,\n",
+    "    created_at          TIMESTAMPTZ NOT NULL,\n",
+    "    updated_at          TIMESTAMPTZ NOT NULL,    \n",
+    "    PRIMARY KEY         (user_id, closest_connection)\n",
+    "    );\n",
+    "\"\"\"  \n",
+    "\n",
+    "# Data Model for find_user_rec - postgresql tables\n",
+    "\"\"\"\n",
+    "    CREATE TABLE graph_recs.recommendations (\n",
+    "    user_id             INT    NOT NULL,\n",
+    "    rec_id              INT    NOT NULL,\n",
+    "    created_at          TIMESTAMPTZ NOT NULL,\n",
+    "    updated_at          TIMESTAMPTZ NOT NULL,    \n",
+    "    PRIMARY KEY         (user_id, rec_id)\n",
+    "    );å\n",
+    "    \n",
+    "    CREATE TABLE graph_recs.rec_reasons (\n",
+    "    user_id             INT    NOT NULL,\n",
+    "    rec_id              INT    NOT NULL,\n",
+    "    reason_id           INT    NOT NULL,\n",
+    "    weight              Decimal    NOT NULL,\n",
+    "    created_at          TIMESTAMPTZ NOT NULL,\n",
+    "    updated_at          TIMESTAMPTZ NOT NULL,    \n",
+    "    PRIMARY KEY         (user_id, rec_id, reason_id)\n",
+    "    );    \n",
+    "\"\"\"  "
    ]
   },
   {
@@ -443,6 +488,10 @@
    "outputs": [],
    "source": [
     "# Perform quality checks here\n",
+    "# Two data quality checks are performed\n",
+    "# 1. make sure there is no null data in the results\n",
+    "# 2. make sure all results are updated in the last 24 hours.\n",
+    "\n",
     "run_quality_checks = DataQualityOperator(\n",
     "    task_id='run_data_quality_checks',\n",
     "    redshift_conn_id='redshift',\n",
@@ -458,21 +507,7 @@
     "        (\"SELECT COUNT(user_id) from graph_recs.user_rec_reasons WHERE updated_at < now()- interval \\'1 day\\'\", 0),              \n",
     "    ],\n",
     "    dag=dag\n",
-    ")\n",
-    "\n",
-    "redshift = PostgresHook(postgres_conn_id=\"redshift\")\n",
-    "for (test_query, expected_result)  in self.test_cases:\n",
-    "    self.log.info(f'Running Data Quality Check: {test_query}')\n",
-    "    records = redshift.get_records(test_query)\n",
-    "\n",
-    "    if len(records) < 1 or len(records[0]) < 1:\n",
-    "        self.log.info(f\"Data quality check failed. {test_query} returned no results\")\n",
-    "        raise ValueError(f\"Data quality check failed. {test_query} returned no results\")\n",
-    "\n",
-    "    num_records = records[0][0]\n",
-    "    if num_records != expected_result:\n",
-    "        self.log.info(f\"Data quality check failed. {test_query} contained {num_records} rows but expected {expected_result}\")\n",
-    "        raise ValueError(f\"Data quality check failed. {test_query} contained {num_records} rows but expected {expected_result}\")"
+    ")"
    ]
   },
   {
@@ -582,128 +617,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Please refer to readme for the write up."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import datetime as dt\n",
-    "import os\n",
-    "LAST_DATE = dt.datetime.now().date().strftime(\"%Y%m%d\")\n",
-    "CURRENT_TIME = dt.datetime.now().strftime('%s')\n",
-    "filename = 't.csv'\n",
-    "S3_BUCKET = 'ds-data-store'\n",
-    "S3_PATH = 'graph_data/' + LAST_DATE"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'s3://ds-data-store/graph_data/20190926/t.csv'"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "os.path.join('s3://',S3_BUCKET, S3_PATH, filename)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>user_id</th>\n",
-       "      <th>user_rec</th>\n",
-       "      <th>score</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0.6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>3</td>\n",
-       "      <td>5</td>\n",
-       "      <td>0.8</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   user_id  user_rec  score\n",
-       "0        2         2    0.6\n",
-       "1        3         5    0.8"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "aa=pd.DataFrame({'user_id':[1,2,3], 'user_rec':[1,2,5]})\n",
-    "bb=pd.DataFrame({'user_id':[1,2,3], 'score':[0.1,0.6,0.8]})\n",
-    "pd.merge(aa, bb[bb['score']>0.5], left_on='user_id', right_on='user_id')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
